--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/darAltaEmpleado.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionEmpleados/darAltaEmpleado.tex
@@ -18,9 +18,9 @@
     \addCaseUseStep{ZMGestión da de alta el usuario indicado y muestra un mensaje informando que la operación se realizó con éxito.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
-	\newAlternative{A1: El usuario ya se encuentra en estado Activo.}{1} %Flujo alternativo A1.
+	\newAlternative{A1: El usuario ya se encuentra en estado Alta.}{1} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 1 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion informa que el usuario indicado ya que encuentra en estado Activo.}
+    \alternativeRow{ZMGestion informa que el usuario indicado ya que encuentra en estado Alta.}
     \caseUseRow{El escenario vuelve al punto 1.}
 }
 
