--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/darBajaProducto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/darBajaProducto.tex
@@ -14,8 +14,8 @@
 	\caseUseRow{Ninguna.} %Postcondiciones
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
-    \addCaseUseStep{El usuario indica el producto que desea dar de baja.}
-    \addCaseUseStep{ZMGestion cambia el estado del producto a baja y muestra un mensaje indicando que la operación se realizo con éxito.}
+    \addCaseUseStep{El administrador indica el producto que desea dar de baja.}
+    \addCaseUseStep{ZMGestion cambia el estado del producto a Baja y muestra un mensaje indicando que la operación se realizo con éxito.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
 	\newAlternative{A1: El producto ya se encontraba en estado de baja.}{1} %Flujo alternativo A1.
