--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/modificarProducto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/modificarProducto.tex
@@ -14,9 +14,9 @@
 	\caseUseRow{Ninguna.} %Postcondiciones
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
-    \addCaseUseStep{El usuario selecciona el producto que desea modificar.}
+    \addCaseUseStep{El administrador selecciona el producto que desea modificar.}
     \addCaseUseStep{ZMGestion muestra un formulario autocompletado con los datos del producto seleccionado para que el usuario modifique: nombre, categoría, grupo, cantidad de metros de tela necesario para producirlo y precio.}
-    \addCaseUseStep{El usuario modifica los campos que desea cambiar.}
+    \addCaseUseStep{El administrador modifica los campos que desea cambiar.}
     \addCaseUseStep{ZMGestion modifica el producto asignando al producto los valores que hayan sido modificados y muestra un mensaje indicando el éxito de la operación.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
@@ -43,9 +43,9 @@
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que la cantidad de tela no puede ser menor que cero.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
-    \newAlternative{A4: El usuario ha dejado un campo requerido vacio.}{3} %Flujo alternativo A3.
+    \newAlternative{A4: El administrador ha dejado un campo requerido vacio.}{3} %Flujo alternativo A3.
 	\caseUseRow{La secuencia A4 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion informa al usuario que dicho campo es requerido.}
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que dicho campo es requerido.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
 }
