--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTelas/listarTelas.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionTelas/listarTelas.tex
@@ -5,8 +5,8 @@
 \renewcommand{\caseUseModified}{29/01/2020} %Fecha modificación
 \renewcommand{\caseUseName}{\CUlistarTelas - Listar telas } %{\CUcammelCase - Title}
 
-\renewcommand{\caseUseSummary}{Este caso de uso permite a un usuario listar todas las telas.} %Resumen
-\renewcommand{\caseUsePeople}{Usuario: quiere ver todas las telas existentes.} %Actor: Meta
+\renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor de ZMGestion listar todas las telas.} %Resumen
+\renewcommand{\caseUsePeople}{Vendedor: quiere ver todas las telas existentes.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
 	\caseUseRow{Haber iniciado sesión en el sistema y tener el permiso necesario para realizar esta función.} %Precondiciones
 }
@@ -14,7 +14,7 @@
 	\caseUseRow{Ninguna.} %Postcondiciones
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
-    \addCaseUseStep{El usuario accede a la pantalla para ver todas las telas.}
+    \addCaseUseStep{El vendedor accede a la pantalla para ver todas las telas.}
     \addCaseUseStep{ZMGestion muestra una lista con todas las telas existentes.}
 
 }
