--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -40,11 +40,10 @@
 		\end{itemize}
 		\item Gestión roles
 		\begin{itemize}
-			\item Quitar esto cuando se descomente alguna línea de abajo
-			%\itemCaseUse{crearRol}{Crear rol}
-			%\itemCaseUse{listarRoles}{Listar roles}
-			%\itemCaseUse{modificarRol}{Modificar rol}
-			%\itemCaseUse{borrarRol}{Borrar rol}
+			\itemCaseUse{crearRol}{Crear rol}
+			\itemCaseUse{listarRoles}{Listar roles}
+			\itemCaseUse{modificarRol}{Modificar rol}
+			\itemCaseUse{borrarRol}{Borrar rol}
 		\end{itemize}
 		\item Gestión productos
 		\begin{itemize}
@@ -98,13 +97,12 @@
 		\end{itemize}
 		\item Gestión clientes
 		\begin{itemize}
-			\item Quitar esto cuando se descomente alguna línea de abajo
-			%\itemCaseUse{crearCliente}{Crear cliente}
-			%\itemCaseUse{buscarAvanzadoClientes}{Buscar avanzado clientes}
-			%\itemCaseUse{darBajaCliente}{Dar de baja cliente}
-			%\itemCaseUse{darAltaCliente}{Dar de alta cliente}
-			%\itemCaseUse{modificarCliente}{Modificar cliente}
-			%\itemCaseUse{borrarCliente}{Borrar cliente}
+			\itemCaseUse{crearCliente}{Crear cliente}
+			\itemCaseUse{buscarAvanzadoClientes}{Buscar avanzado clientes}
+			\itemCaseUse{darBajaCliente}{Dar de baja cliente}
+			\itemCaseUse{darAltaCliente}{Dar de alta cliente}
+			\itemCaseUse{modificarCliente}{Modificar cliente}
+			\itemCaseUse{borrarCliente}{Borrar cliente}
 		\end{itemize}
 		\item Gestión presupuestos
 		\begin{itemize}
@@ -369,10 +367,10 @@
 			\input{Capitulos/Capitulo4/CasosUso/GestionEmpleados/borrarEmpleado.tex}
 
 			%GestionRoles
-			%\input{Capitulos/Capitulo4/CasosUso/GestionRoles/crearRol.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionRoles/listarRoles.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionRoles/modificarRol.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionRoles/borrarRol.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionRoles/crearRol.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionRoles/listarRoles.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionRoles/modificarRol.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionRoles/borrarRol.tex}
 
 			%GestionProductos
 			\input{Capitulos/Capitulo4/CasosUso/GestionProductos/crearProducto.tex}
@@ -417,12 +415,12 @@
 			%\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/borrarUbicacion.tex}
 
 			%GestionClientes
-			%\input{Capitulos/Capitulo4/CasosUso/GestionClientes/crearCliente.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionClientes/buscarAvanzadoClientes.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionClientes/darBajaCliente.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionClientes/darAltaCliente.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionClientes/modificarCliente.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionClientes/borrarCliente.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionClientes/crearCliente.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionClientes/buscarAvanzadoClientes.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionClientes/darBajaCliente.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionClientes/darAltaCliente.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionClientes/modificarCliente.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionClientes/borrarCliente.tex}
 
 			%GestionPresupuestos
 			%\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/crearPresupuesto.tex}
